; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_syncobj.c_drm_syncobj_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_syncobj.c_drm_syncobj_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_file = type { i32, i32 }
%struct.drm_syncobj = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_file*, i32)* @drm_syncobj_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drm_syncobj_destroy(%struct.drm_file* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drm_file*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.drm_syncobj*, align 8
  store %struct.drm_file* %0, %struct.drm_file** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %8 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %11 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %10, i32 0, i32 1
  %12 = load i32, i32* %5, align 4
  %13 = call %struct.drm_syncobj* @idr_remove(i32* %11, i32 %12)
  store %struct.drm_syncobj* %13, %struct.drm_syncobj** %6, align 8
  %14 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %15 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %14, i32 0, i32 0
  %16 = call i32 @spin_unlock(i32* %15)
  %17 = load %struct.drm_syncobj*, %struct.drm_syncobj** %6, align 8
  %18 = icmp ne %struct.drm_syncobj* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %2
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %25

22:                                               ; preds = %2
  %23 = load %struct.drm_syncobj*, %struct.drm_syncobj** %6, align 8
  %24 = call i32 @drm_syncobj_put(%struct.drm_syncobj* %23)
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %22, %19
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local %struct.drm_syncobj* @idr_remove(i32*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @drm_syncobj_put(%struct.drm_syncobj*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
